Bug 118152 - [patch] Matches Found in find dialog isn't reset if you keep searching.
Summary: [patch] Matches Found in find dialog isn't reset if you keep searching.
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml part (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 124615 126220 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-12-12 02:36 UTC by Tim Hutt
Modified: 2007-11-12 15:25 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to reset number of found matches before restarting search (451 bytes, patch)
2007-02-28 17:21 UTC, Tais P. Hansen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Hutt 2005-12-12 02:36:35 UTC
Version:            (using KDE KDE 3.5.0)

If you find something in konqueror and then it gets to the end of the document if says something like:

"3 matches found. Continue from the top of the document?"
[Continue] [Stop]

If you continue and get to the end again it will say there were 6 matches! Then 9, 12, etc.

Something needs to be reset somewhere.
Comment 1 Tommi Tervo 2006-04-25 14:46:12 UTC
*** Bug 126220 has been marked as a duplicate of this bug. ***
Comment 2 Tommi Tervo 2006-08-29 18:54:55 UTC
*** Bug 124615 has been marked as a duplicate of this bug. ***
Comment 3 Māris Nartišs 2006-11-10 09:58:02 UTC
I can confirm it.
Konqueror 3.5.5-0ubuntu3
Comment 4 Tais P. Hansen 2007-02-28 16:39:54 UTC
I can confirm this too in KDE-3.5.5 on Kubuntu 6.10 and KDE-3.5.6 on Slackware 11 (compiled from sources).
Comment 5 Tais P. Hansen 2007-02-28 17:21:46 UTC
Created attachment 19851 [details]
Patch to reset number of found matches before restarting search
Comment 6 Sami Liedes 2007-06-16 01:07:16 UTC
I can reproduce this on KDE 3.5.7.
Comment 7 Rafael Fernández López 2007-11-12 15:25:26 UTC
SVN commit 735731 by ereslibre:

Fix the problem of no reseting the hits count. Thanks goes to Tais M. Hansen. This bug is inherited from KHTMLPart from KDE 3.x series with bug report http://bugs.kde.org/show_bug.cgi?id=118152

BUG: 118152


 M  +1 -0      khtml_part.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=735731