Fix the problem of no reseting the hits count. Thanks goes to Tais M. Hansen. This bug is inherited from KHTMLPart from KDE 3.x series with bug report http://bugs.kde.org/show_bug.cgi?id=118152

BUG: 118152

svn path=/branches/KDE/3.5/kdelibs/; revision=735731